Fri May  3 06:57:13 2002  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Proactor_Test.cpp:

          Add a conditional to avoid building this test if threads are not
          enabled.

Fri May  3 06:47:23 2002  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Dev_Poll_Reactor_Test.cpp:

          Add a conditional main for when ACE_HAS_DEV_POLL and
          ACE_HAS_EVENT_POLL are not defined.

Fri May  3 06:41:10 2002  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Token.h:

          Remove parameter name to avoid a warning from g++.

Thu May 02 15:54:48 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Select_Reactor_T.cpp (work_pending):

	  Check if any timers are pending.  If so, override any timeout
	  from the select() call.  Corrects a problem where the decision
	  that no work was pending despite the fact that timers were
	  pending.

Thu May 02 15:53:39 2002  Ossama Othman  <ossama@uci.edu>

	* tests/Dev_Poll_Reactor_Test.cpp:

	  Added some comments that briefly describe the test.

Thu May  2 15:45:34 2002  Ossama Othman  <ossama@uci.edu>

	* tests/Dev_Poll_Reactor_Test.cpp:

	  New one-button test for the Dev_Poll_Reactor.  Currently it is
	  fairly simple.  Improvements to be added soon.

Thu May  2 15:22:36 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.h (work_pending_i):
	* ace/Dev_Poll_Reactor.cpp (work_pending_i):

	  Accept a pointer to ACE_Time_Value instead of a reference.

	  Corrected the logic for the test for pending timers.

Thu May 02 14:38:53 2002  Ossama Othman  <ossama@uci.edu>

	* examples/Reactor/Misc/pingpong.cpp:

	  Include "ACE.h" to pull in methods in the ACE class/namespace.

Thu May  2 14:02:20 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.cpp (work_pending_i):

	  Take into account pending timers when deciding if there is work
	  to be done.

Thu May 02 13:34:08 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.cpp:
