@@ -1,3 +1,9 @@
+Fri May  3 07:07:31 2002  Chad Elliott  <elliott_c@ociweb.com>
+
+        * tests/Proactor_Test.cpp:
+
+          Put ACE_TEXT around bare char strings.
+
 Fri May  3 06:57:13 2002  Chad Elliott  <elliott_c@ociweb.com>
 
         * tests/Proactor_Test.cpp:
